--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <!-- MULTIBAR -->
-        <div class="row color-1-trans shadow-down" id="multibar-scroll">
+        <div class="row color-1-trans" id="multibar-scroll">
           {% include 'multibar.html' %}
         </div>
       </div>
