--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,4 +1,4 @@
-<div class="row color-1-trans shadow-up">
+<div class="row color-1-trans" id="player">
   <div class="container">
     <div class="row" id="player-wrapper">
       <div class="col-auto" id="player-image">
