--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -40,6 +40,16 @@ dopepod
             </li>
             {% endif %}
           {% endif %}
+          <li>
+            <a class="btn btn-dope btn-dope-tab reverse-toggle results-minimize" data-toggle="collapse" href="#results-collapse" aria-expanded="true" aria-controls="results-collapse" aria-label="Minimize">
+              <i class="fas fa-minus-circle"></i>
+            </a>
+          </li>
+          <li>
+            <a class="btn btn-dope btn-dope-tab results-close" href="#" aria-label="Close">
+              <i class="fas fa-times-circle"></i>
+            </a>
+          </li>
         </ul>
     </div>
   </div>
@@ -141,7 +151,7 @@ dopepod
     {% endif %}
   </div>
   {% if podcasts or subscriptions %}
-  <div class="row results-wrapper">
+  <div class="row collapse show results-wrapper" id="results-collapse">
     <div class="col">
       {% if podcasts.has_other_pages %}
         <div class="row pagination">
