--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -28,7 +28,7 @@
           accept-charset="utf-8">
           {% endif %}
           <button id="search-button" type="submit">
-            <i class="fa fa-search"></i>
+            <i class="fa fa-search icon"></i>
           </button>
         </div>
       </form>
