--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -28,7 +28,7 @@
           <label class="btn btn-dope options-button active">
             <input class="field-button" type="checkbox" name="chart-selected-genre" value="{{ chart.genre }}" checked>
             {{ chart.genre }}
-            <i class="fas fa-times-circle selected"></i>
+            <i class="fas fa-times-circle icon selected"></i>
           </label>
         </div>
       {% endif %}
