--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -8,12 +8,12 @@
       <ul>
         <li>
           <a class="btn btn-dope btn-dope-tab reverse-toggle results-minimize" data-toggle="collapse" href="#episode-collapse" aria-expanded="true" aria-controls="episode-collapse" aria-label="Minimize">
-            <i class="fas fa-minus-circle"></i>
+            <i class="fas fa-minus-circle icon"></i>
           </a>
         </li>
         <li>
           <a class="btn btn-dope btn-dope-tab results-close" href="#" aria-label="Close">
-            <i class="fas fa-times-circle"></i>
+            <i class="fas fa-times-circle icon"></i>
           </a>
         </li>
       </ul>
