--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -21,10 +21,10 @@
       </div>
       <div id="player-buttons">
         <a id="player-minimize" href="#" aria-label="Minimize">
-          <i class="fas fa-minus-circle"></i>
+          <i class="fas fa-minus-circle icon"></i>
         </a>
         <a id="player-close" href="#" aria-label="Close">
-          <i class="fas fa-times-circle"></i>
+          <i class="fas fa-times-circle icon"></i>
         </a>
       </div>
     </div>
