--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -11,27 +11,40 @@ settings
       <h3>
         Settings
       </h3>
-        <div class="form-group">
-          <label class="form-label" for="email">Email</label>
-          <input class="form-control" type="email" name="email" id="email" value="{{ user_form.email.value }}">
-        </div>
-        <div class="form-group">
-          <label class="form-label" for="location">Location</label>
-          <input class="form-control" type="text" name="tocation" id="location" value="{{ profile_form.location.value }}">
-        </div>
-      <div class="form-group">
-        <label class="form-label" for="bio">Bio</label>
-        <textarea class="form-control" rows="3" name="bio" maxlength="500" id="bio" value="{{ profile_form.bio.value }}"></textarea>
+      <div id="settings-errors">
+        {% if errors %}
+          {% for k, v in errors.items %}
+            <span class="error-message">
+              {{ k|capfirst }}: {{ v }}
+            </span>
+          {% endfor %}
+        {% endif %}
       </div>
-      <div class="form-group">
+      <div class="login-form-group">
+        <label for="email">Email</label>
+        <input class="form-control login-field" type="email" name="email" id="email" value="{{ user_form.email.value }}">
+      </div>
+      <div class="login-form-group">
+        <label for="location">Location</label>
+        <input class="form-control login-field" type="text" name="location" id="location" value="{{ profile_form.location.value }}">
+      </div>
+      <div class="login-form-group">
+        <label for="bio">Bio</label>
+        <textarea class="form-control login-field" rows="3" name="bio" maxlength="500" id="bio">{{ profile_form.bio.value }}</textarea>
+      </div>
+      <div class="login-form-group">
         <div class="form-check form-check-inline">
           <label class="form-check-label" for="show_explicit">
-            <input class="form-check-input" type="checkbox" name="show_explicit" id="show_explicit" checked="" value="{{ profile_form.show_explicit.value }}">
+            {% if profile_form.show_explicit.value %}
+              <input class="form-check-input" type="checkbox" name="show_explicit" id="show_explicit" checked />
+            {% else %}
+              <input class="form-check-input" type="checkbox" name="show_explicit" id="show_explicit" />
+            {% endif %}
             Show explicit content
           </label>
         </div>
-        <button type="submit" class="btn btn-dope active float-right settings-button">Save</button>
       </div>
+      <button type="submit" id="settings-save"class="btn btn-dope active">Save</button>
     </form>
   </div>
 </div>
