--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -33,7 +33,7 @@ dopepod
       {% if errors %}
         <span class="error-message">
           {{ errors }}
-        </span>  
+        </span>
       {% endif %}
     </div>
     <div id="login-wrapper">
@@ -184,16 +184,16 @@ dopepod
       </div>
     </div>
     <a class="btn btn-dope socialaccount_provider google social-link" href="/account/google/login/?process=login" title="Google">
-      <i class="fab fa-google"></i> Sign in with Google
+      <i class="fab fa-google icon"></i> Sign in with Google
     </a>
     <a class="btn btn-dope socialaccount_provider google social-link" href="/account/facebook/login/?process=login" title="Facebook">
-      <i class="fab fa-facebook"></i> Sign in with Facebook
+      <i class="fab fa-facebook icon"></i> Sign in with Facebook
     </a>
     <!-- <a title="Reddit" class="socialaccount_provider reddit" href="/account/reddit/login/?process=login">
-      <i class="fab fa-reddit"></i>
+      <i class="fab fa-reddit icon"></i>
     </a> -->
     <!-- <a title="Github" class="socialaccount_provider github" href="/account/github/login/?process=login">
-    <i class="fab fa-github"></i>
+    <i class="fab fa-github icon"></i>
     </a> -->
   </div>
 </div>
