--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -1,7 +1,9 @@
 <div class="col results">
   <div class="row results-bar">
     <div class="col results-header">
-      {{ chart.header }}
+      <span>
+        {{ chart.header }}
+      </span>
     </div>
     <div class="col-auto results-options">
       <ul>
