--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -8,7 +8,9 @@ dopepod
 <div class="col results">
   <div class="row results-bar">
     <div class="col results-header">
-      {{ results_header }}
+      <span>
+        {{ results_header }}
+      </span>
     </div>
     <div class="col-auto results-options">
       <ul>
