--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -4,19 +4,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1,
     shrink-to-fit=no">
+    <meta name="description" content="dopepod is a simple platform-independent podcast web app. Listen and subscribe to all your favorite podcasts.">
+    <meta name="application-name" content="dopepod">
     <title>
       {% block title %}
       {% endblock %}
     </title>
-    <!--Font Awesome-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <!-- CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
@@ -26,7 +25,7 @@
         {% include 'navbar.html' %}
       </div>
     </nav>
-    <!-- CONTENT -->
+    <!-- MAIN CONTENT -->
     <div id="main-wrapper">
       <div class="container-fluid sticky-top extended" id="flap">
         <div class="row open" id="stage">
@@ -78,12 +77,9 @@
         </div>
       </div>
     </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    <!-- JS -->
     <script src="{% static 'scripts.js' %}"></script>
   </body>
 </html>
