--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -2,7 +2,9 @@
 <div class="col results">
   <div class="row results-bar">
     <div class="col results-header">
-      {{ episodes_header }}
+      <span>
+        {{ episodes_header }}
+      </span>    
     </div>
     <div class="col-auto results-options">
       <ul>
