--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -32,7 +32,7 @@
           </label>
         </div>
       {% endif %}
-      <div class="collapse genre-options-collapse" id="chart-genre-collapse">
+      <div class="collapse chart-options-collapse" id="chart-genre-collapse">
         <div class="options-group" id="chart-genre-buttons" data-toggle="buttons">
           {% if chart.genre %}
             <label class="btn btn-dope options-button">
