--- a/index/static/style.css
+++ b/index/static/style.css
@@ -91,8 +91,6 @@ body {
   min-width: 0;
 }
 .nav-fade li {
-  display: block;
-  border-radius: .25rem;
   transition: background .25s ease-in-out;
   -moz-transition: background .25s ease-in-out;
   -webkit-transition: background .25s ease-in-out;
@@ -104,11 +102,11 @@ body {
   margin-bottom: 3px;
 }
 #navbar .nav-fade li:hover {
+  border-radius: .25rem;
   color: #2e2e2e;
   background: #ddd;
 }
 .nav-link-dope  {
-  border-radius: .25rem;
   cursor: pointer;
   border: none;
   background: inherit;
@@ -118,8 +116,8 @@ body {
   padding: 10px;
 }
 .nav-link-dope:hover {
-  color: #2e2e2e;
   text-decoration: none;
+  color: #2e2e2e;
 }
 .nav-link-dope:focus {
   outline: rgba(0,0,0,0);
@@ -245,7 +243,7 @@ body {
 
 /* LOADING ANIMATIONS */
 #results-loading {
-
+  font-size: 20px;
   padding-top: 15px;
   padding-bottom: 15px;
 }
@@ -605,6 +603,7 @@ body {
   margin-left: 5px;
 }
 .options-select {
+  overflow: hidden;
   padding-top: 4px;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
