--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -102,7 +102,7 @@
       </a>
     </li>
     <li>
-      <a class="nav-link-dope ajax-signup d-none d-md-block" href="/?signup=yeah">
+      <a class="nav-link-dope ajax-signup d-none d-md-block" href="/?view=signup">
         Signup
       </a>
       <a class="nav-link-dope ajax-login d-block d-md-none" href="/">
