--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -27,7 +27,7 @@
     <div class="row options-select color-1" id="chart-selected-buttons" data-toggle="buttons">
       {% if chart.genre %}
       <div class="col-auto ml-auto options-group">
-          <label class="btn btn-dope options-button active">
+          <label class="btn btn-dope selected-button active">
             <input class="field-button" type="checkbox" name="chart-selected-genre" value="{{ chart.genre }}" checked>
             {{ chart.genre }}
             <i class="fas fa-times-circle icon selected"></i>
