--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -5,186 +5,188 @@
 {% endblock %}
 
 {% block center-stage %}
-<div class="row">
-  <div class="col" id="podinfo" data-itunesid="{{ podcast.itunesid }}">
-    <div class="row" id="podinfo-top">
-      <div class="col-4" id="podinfo-left">
-        <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=300&h=300&t=absolute" />
-        <ul class="podinfo-side-list d-block d-lg-none">
-          <li>
-            <span class="n_subscribers">
-              {{ podcast.n_subscribers }}
-            </span>
-            <span class="subscriber">
-              subscriber{{ podcast.n_subscribers|pluralize }}
-            </span>
-          </li>
-          <li>
-            <span>
-              Genre:
-            </span>
-            <span class="podinfo-genre">
-              {% if podcast.genre.supergenre %}
-              {{ podcast.genre.supergenre }} -
-              {% endif %}
-              {{ podcast.genre }}
-            </span>
-          </li>
-          <li>
-            <span>
-              Language:
-            </span>
-            <span class="podinfo-language">
-              {{ podcast.language }}
-            </span>
-          </li>
-          <li>
-            <span>
-              Content:
-            </span>
-            <span class="podinfo-explicit">
-              {% if podcast.explicit %}
-              explicit
-              {% else %}
-              clean
-              {% endif %}
-            </span>
-          </li>
-          <li>
-            <em>
-              <span class="podinfo-copyright">
-                {{ podcast.copyrighttext }}
-              </span>
-            </em>
-          </li>
-        </ul>
-      </div>
-      <div class="col-8 col-lg-6" id="podinfo-main">
-        <h5 id="podinfo-title">
-          {{ podcast.title }}
-        </h5>
-        <h6 id="podinfo-artist">
-          <span>
-            By
-          </span>
-          {{ podcast.artist }}
-        </h6>
-        <p id="podinfo-description">
-          {{ podcast.description }}
-        </p>
-      </div>
-      <div class="col-lg-2" id="podinfo-right">
-        <ul class="podinfo-side-list d-none d-lg-block">
-          {% if podcast.global_rank %}
+<div class="container">
+  <div class="row">
+    <div class="col" id="podinfo" data-itunesid="{{ podcast.itunesid }}">
+      <div class="row" id="podinfo-top">
+        <div class="col-4" id="podinfo-left">
+          <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=300&h=300&t=absolute" />
+          <ul class="podinfo-side-list d-block d-lg-none">
             <li>
-              <span class="global_rank">
-                #{{ podcast.global_rank }} in
-                podcasts
+              <span class="n_subscribers">
+                {{ podcast.n_subscribers }}
+              </span>
+              <span class="subscriber">
+                subscriber{{ podcast.n_subscribers|pluralize }}
               </span>
             </li>
-          {% endif %}
-          {% if podcast.genre_rank %}
             <li>
-              <span class="genre_rank">
-                #{{ podcast.genre_rank }} in
+              <span>
+                Genre:
+              </span>
+              <span class="podinfo-genre">
                 {% if podcast.genre.supergenre %}
-                  {{ podcast.genre.supergenre }}
+                {{ podcast.genre.supergenre }} -
+                {% endif %}
+                {{ podcast.genre }}
+              </span>
+            </li>
+            <li>
+              <span>
+                Language:
+              </span>
+              <span class="podinfo-language">
+                {{ podcast.language }}
+              </span>
+            </li>
+            <li>
+              <span>
+                Content:
+              </span>
+              <span class="podinfo-explicit">
+                {% if podcast.explicit %}
+                explicit
                 {% else %}
-                  {{ podcast.genre }}
+                clean
                 {% endif %}
               </span>
             </li>
-          {% endif %}
-          <li>
-            <span class="n_subscribers">
-              {{ podcast.n_subscribers }}
-            </span>
-            <span class="subscriber">
-              subscriber{{ podcast.n_subscribers|pluralize }}
-            </span>
-          </li>
-          <li>
-            <span>
-              Genre:
-            </span>
-            <span class="podinfo-genre">
-              {% if podcast.genre.supergenre %}
-              {{ podcast.genre.supergenre }} -
-              {% endif %}
-              {{ podcast.genre }}
-            </span>
-          </li>
-          <li>
-            <span>
-              Language:
-            </span>
-            <span class="podinfo-language">
-              {{ podcast.language }}
-            </span>
-          </li>
-          <li>
-            <span>
-              Content:
-            </span>
-            <span class="podinfo-explicit">
-              {% if podcast.explicit %}
-              explicit
-              {% else %}
-              clean
-              {% endif %}
-            </span>
-          </li>
-          <li>
-            <a class="podinfo-podcastUrl" href="{{ podcast.podcastUrl }}">
-            <span >
-              Podcast website
-            </span>
-            </a>
-          </li>
-          <li>
-            <a class="podinfo-feedUrl" href="{{ podcast.feedUrl }}">
-              <span >
-                Podcast RSS feed
-              </span>
-              </a>
-            </li>
             <li>
               <em>
-                <span id="podinfo-copyright">
+                <span class="podinfo-copyright">
                   {{ podcast.copyrighttext }}
                 </span>
               </em>
             </li>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="row" id="podinfo-bottom">
-      <div class="col-auto" id="podinfo-options">
-        {% if user.is_authenticated %}
-        <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
-        {% csrf_token %}
-        <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-        {% if podcast.is_subscribed %}
-        <button type="submit" class="btn btn-dope btn-dope-podinfo sub-button">
-          Unsubscribe
-          {% else %}
-          <button type="submit" class="btn btn-dope btn-dope-podinfo active sub-button">
-            Subscribe
+          </ul>
+        </div>
+        <div class="col-8 col-lg-6" id="podinfo-main">
+          <h5 id="podinfo-title">
+            {{ podcast.title }}
+          </h5>
+          <h6 id="podinfo-artist">
+            <span>
+              By
+            </span>
+            {{ podcast.artist }}
+          </h6>
+          <p id="podinfo-description">
+            {{ podcast.description }}
+          </p>
+        </div>
+        <div class="col-lg-2" id="podinfo-right">
+          <ul class="podinfo-side-list d-none d-lg-block">
+            {% if podcast.global_rank %}
+              <li>
+                <span class="global_rank">
+                  #{{ podcast.global_rank }} in
+                  podcasts
+                </span>
+              </li>
             {% endif %}
+            {% if podcast.genre_rank %}
+              <li>
+                <span class="genre_rank">
+                  #{{ podcast.genre_rank }} in
+                  {% if podcast.genre.supergenre %}
+                    {{ podcast.genre.supergenre }}
+                  {% else %}
+                    {{ podcast.genre }}
+                  {% endif %}
+                </span>
+              </li>
+            {% endif %}
+            <li>
+              <span class="n_subscribers">
+                {{ podcast.n_subscribers }}
+              </span>
+              <span class="subscriber">
+                subscriber{{ podcast.n_subscribers|pluralize }}
+              </span>
+            </li>
+            <li>
+              <span>
+                Genre:
+              </span>
+              <span class="podinfo-genre">
+                {% if podcast.genre.supergenre %}
+                {{ podcast.genre.supergenre }} -
+                {% endif %}
+                {{ podcast.genre }}
+              </span>
+            </li>
+            <li>
+              <span>
+                Language:
+              </span>
+              <span class="podinfo-language">
+                {{ podcast.language }}
+              </span>
+            </li>
+            <li>
+              <span>
+                Content:
+              </span>
+              <span class="podinfo-explicit">
+                {% if podcast.explicit %}
+                explicit
+                {% else %}
+                clean
+                {% endif %}
+              </span>
+            </li>
+            <li>
+              <a class="podinfo-podcastUrl" href="{{ podcast.podcastUrl }}">
+              <span >
+                Podcast website
+              </span>
+              </a>
+            </li>
+            <li>
+              <a class="podinfo-feedUrl" href="{{ podcast.feedUrl }}">
+                <span >
+                  Podcast RSS feed
+                </span>
+                </a>
+              </li>
+              <li>
+                <em>
+                  <span id="podinfo-copyright">
+                    {{ podcast.copyrighttext }}
+                  </span>
+                </em>
+              </li>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row" id="podinfo-bottom">
+        <div class="col-auto" id="podinfo-options">
+          {% if user.is_authenticated %}
+          <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+          {% if podcast.is_subscribed %}
+          <button type="submit" class="btn btn-dope btn-dope-podinfo sub-button">
+            Unsubscribe
+            {% else %}
+            <button type="submit" class="btn btn-dope btn-dope-podinfo active sub-button">
+              Subscribe
+              {% endif %}
+            </button>
+          </form>
+          {% endif %}
+          <a class="btn btn-dope active" id="show-episodes" href="#">
+            <span>
+              Episodes
+            </span>
+          </a>
+          <button class="btn btn-dope btn-dope-podinfo btn-dope-disabled">
+            <span>
+              Reviews
+            </span>
           </button>
-        </form>
-        {% endif %}
-        <a class="btn btn-dope active" id="show-episodes" href="#">
-          <span>
-            Episodes
-          </span>
-        </a>
-        <button class="btn btn-dope btn-dope-podinfo btn-dope-disabled">
-          <span>
-            Reviews
-          </span>
-        </button>
+        </div>
       </div>
     </div>
   </div>
