--- a/index/static/style.css
+++ b/index/static/style.css
@@ -35,6 +35,9 @@ body {
   -moz-box-shadow: rgba(0,0,0,.3) 0 0px 5px;
   box-shadow: rgba(0,0,0,.3) 0 0px 5px;
 }
+.btn-dope.selected:hover {
+  color: #2e2e2e;
+}
 .toggle[aria-expanded="true"] {
   color: #fff;
   background: rgba(0, 204, 122, 1);
@@ -589,9 +592,9 @@ body {
   padding-bottom: 10px;
   overflow: hidden;
   border-bottom: 4px solid rgba(0, 204, 122, 1);
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 2px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 2px;
-  box-shadow: rgba(0,0,0,.3) 0 1px 2px ;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 5px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 5px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 5px ;
 }
 .results-bar {
 }
@@ -621,9 +624,9 @@ body {
 .options-select {
   overflow: hidden;
   padding-top: 4px;
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
-  box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 -1px 5px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 -1px 5px;
+  box-shadow: rgba(0,0,0,.3) 0 -1px 5px;
 }
 .pagination {
   padding-top: 10px;
@@ -764,6 +767,9 @@ hr.h-line {
   body {
     font-size: 12px;
   }
+  #podinfo-left .podinfo-side-list li {
+    max-height: 36px;
+  }
 }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
@@ -778,6 +784,9 @@ hr.h-line {
   }
   #podinfo-bottom {
     border: none!important;
+  }
+  #podinfo-left .podinfo-side-list li {
+    max-height: 36px;
   }
 }
 /* tablets/desktops and up ----------- */
