--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -5,20 +5,22 @@ dopepod
 {% endblock %}
 
 {% block center-stage %}
-<div class="row" id="dashboard">
-  <div class="col-auto" id="dashboard-top">
-    <h3>
-      dashboard
-    </h3>
-    <p>
-      You have {{ user.subscription_set.count }}
-      <a class="subscriptions-link" href="{% url 'subscriptions' %}">
-        subscriptions
-      </a>
-    </p>
-    <p>
-      You have no playlist
-    </p>
+<div class="container">
+  <div class="row" id="dashboard">
+    <div class="col-auto" id="dashboard-top">
+      <h3>
+        dashboard
+      </h3>
+      <p>
+        You have {{ user.subscription_set.count }}
+        <a class="subscriptions-link" href="{% url 'subscriptions' %}">
+          subscriptions
+        </a>
+      </p>
+      <p>
+        You have no playlist
+      </p>
+    </div>
   </div>
 </div>
 {% endblock %}
