--- a/login/templates/account/password_reset_from_key.html
+++ b/login/templates/account/password_reset_from_key.html
@@ -1,8 +1,23 @@
-{% extends extend|yesno:'base.html,ajax.html' %}
+{% extends 'base.html' %}
 
 {% block title %}
 dopepod
 {% endblock %}
 
 {% block center-stage %}
+{% if token_fail %}
+    <p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
+{% else %}
+  {% if form %}
+    <form method="POST" action="{{ action_url }}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-dope active">
+          Login
+        </button>
+    </form>
+  {% else %}
+    <p>Your password is now changed.</p>
+  {% endif %}
+{% endif %}
 {% endblock %}
